--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/ssr": "~17.0.0",
     "@nx/angular": "17.1.3",
     "express": "~4.18.2",
+    "lorem-ipsum": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
